[package]
name = "asm_compression"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "memoryapi", "processthreadsapi", "synchapi", "winbase", "winnt"] }
capstone = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bit-vec = "0.6"
clap = "4.0"
